deployment/kubernetes/agent-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: docker-pod
  namespace: jenkins-test
  labels:
    app: docker
spec:
  containers:  # list of containers that you want present for your build, you can define a default container in the Jenkinsfile
    # - name: maven
    #   image: maven:3.8.5-jdk-11-slim
    #   command: ["tail", "-f", "/dev/null"]  # this or any command that is bascially a noop is required, this is so that you don't overwrite the entrypoint of the base container
    #   imagePullPolicy: Always # use cache or pull image for agent
    - name: docker
      image: docker:18.06.1
      command: ["tail", "-f", "/dev/null"]
      imagePullPolicy: Always
      volumeMounts:
        - name: docker
          mountPath: /var/run/docker.sock # We use the k8s host docker engine
  volumes:
    - name: docker
      hostPath:
        path: /var/run/docker.sock
