deployment/kubernetes/agentpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: docker-pod
  labels:
    app: docker
spec:
  containers:
    - name: docker
      image: docker
      command: 
        - cat
      tty: true
      securityContext:
        privileged: true

      volumeMounts:
        - name: dockersock
          mountPath: /var/run/docker.sock
  volumes:
    - name: dockersock
      hostPath:
        path: /var/run/docker.sock
