deployment/kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: team-magma
  name: backend-deployment
  labels:
    name: magma-bubble
spec:
  replicas: 3
  minReadySeconds: 5
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: magma-bubble
  template:
    metadata:
      labels:
        app: magma-bubble
    spec:
      containers:
      - name: magma-bubble-container
        image: teammagma/bubbleback
        resources:
          limits:             
            memory: "256Mi"   
            cpu: "500m"       
        ports:
        - containerPort: 5000
      - name: promtail-container
        image: grafana/promtail
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
        args:
        - -config.file=/etc/promtail/promtail.yml
        volumeMounts:
        - name: logs
          mountPath: /logs
        - name: promtail-config
          mountPath: /etc/promtail
      volumes:
        - name: logs
          emptyDir: {}
        - name: promtail-config
          configMap:
            name: promtail-config
