deployment/kubernetes/black-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: team-magma
  name: black-backend-deployment
  labels:
    app: magma-bubbleback
spec:
  replicas: 3
  minReadySeconds: 5
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: magma-bubbleback
      tier: backend
      track: stable
      color: black
  template:
    metadata:
      labels:
        app: magma-bubbleback
        tier: backend
        track: stable
        color: black
    spec:
      containers:
      - name: magma-backend-container
        image: docker.io/axpazmino/magmabubbleback2:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:             
            memory: "512Mi"   
            cpu: "500m"       
        ports:
        - containerPort: 8080
      - name: promtail-container
        image: grafana/promtail
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
        args:
        - -config.file=/etc/promtail/promtail.yml
        volumeMounts:
        - name: logs
          mountPath: /logs
        - name: promtail-config
          mountPath: /etc/promtail
      volumes:
        - name: logs
          emptyDir: {}
        - name: promtail-config
          configMap:
            name: promtail-config
