deployment/kubernetes/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: team-magma
  labels:
    app: postgres
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: postgres
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: postgres
        tier: backend
        track: stable
    spec:
      containers:
      - name: postgres-container
        image: postgres
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
          - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: db-data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: postgres-volume-claim
