deployment/kubernetes/black-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: red-backend-service
  namespace: team-magma
  labels:
    app:  magma-bubbleback
spec:
  type: LoadBalancer
  selector:
    app:  magma-bubbleback
    tier: backend
    color: red
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
