deployment/kubernetes/postgres-external.yml
apiVersion: v1
kind: Service
metadata:
  namespace: team-magma
  name: postgres-service
spec:
  type: ExternalName
  externalName: postgres-service.postgres.svc.cluster.local
  ports:
  - port: 5432
