deployment/kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: postgres
  labels: 
    app: postgres
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
