deployment/kubernetes/bubble-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bubble-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/magma-bubble/(.*)"
        backend:
          service:
            name: backend-service
            port: 
              number: 5000
